k8s/ingress/nohostname-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alist-nohostname-ingress
spec:
  rules:
    - http:
        paths:
          - path: /alist
            pathType: Prefix
            backend:
              service:
                name: alist
                port:
                  name: http
